# code-complexity-metrics

./: .gitignore  README.md  checksame.py  online_cuda.i  pyproject.toml  run.sh  script.py  test.py
.github/workflows/: ci.yml
archive/gpu/: halstead_opencl.py
code_complexity/: README.md  __main__.py  gpu_delta.py
code_complexity/metrics/: KEYWORDS.py  backup.py  clang_parallel.py  cognitive.py  cyclomatic.py  cyclomatic_parallel.py  halstead.py  language_tokens.py  nesting_depth.py  shader_tokens.py  shared.py  sloc.py  temp.py  utils.py
code_complexity/stats/: advanced_analysis.py  analysis.py  data_loader.py  report_generator.py
mainFolder/metrics/: sloc.py
projectFolder/: __main__.py  gpu_delta.py
projectFolder/metrics/: KEYWORDS.py  cyclomatic.py  halstead.py  sloc.py
samples/: README.md  common.h  edge1.cu  edge2.cu  edge3.cu  edge_main_top.cpp  impl_adaptive_cpp.cpp  impl_cuda.cu  impl_kokkos.cpp  opencl_edge_cases.cpp
samples/adaptive_cpp/: complex.cpp  simple.cpp
samples/boost/: complex.cpp  simple.cpp
samples/complex/: clang_cfg_dump.txt  complex.cpp  complex_kokkos.cpp  hyper_complex.cpp
samples/cpp/: OLD_simple.cpp  advanced_2.cu  case.cpp  complex.cpp  edge.cpp  edge2.cpp  hyper_complex.cpp  isolated.cpp  lambda.cpp  new.cpp  new2.cpp  sudoku.cpp
samples/cpp/algorithm_differences/: mergesort.cpp  quicksort.cpp
samples/cuda/: advanced.cu  advanced_2.cu  edge1.cu  matrix_mul.cu  online.cu
samples/edge_cuda/: matrix_mul2.cu
samples/edge_kokkos/: advanced2.cpp
samples/kokkos/: advanced.cpp
samples/manual/: man_cognitive.cpp  man_halstead.cpp
samples/metal/: complex.cpp  simple.cpp
samples/non_cpp/: OLD_example.py
samples/old/: OLD_simple.cpp  case.cpp  edge2.cpp
samples/openacc/: complex.cpp  simple.cpp
samples/opencl/: complex_opencl2.cpp
samples/opengl_vulkan/: complex.cpp  simple.cpp
samples/openmp/: complex.cpp  simple.cpp
samples/real/: impl_adaptive_cpp.cpp  impl_cuda.cu  temp.cu
samples/real/performance_portability/: Common.cuh  Impl_Cuda.cu  Impl_Cuda.cuh  MatrixMultiplication.h
samples/real/polyhedral/: impl_cuda.cu  impl_cuda2.cu
samples/thesis_testing/ANALYSIS_REPOSITORY/: data.txt  framework_complexity_table.tex
samples/thesis_testing/ANALYSIS_REPOSITORY/Algorithmic_Complexity/Kokkos/: matrix_multiplication_kokkos.cpp  nbody_simulation_kokkos.cpp  polyhedral_kokkos.cpp  vector_addition_kokkos.cpp
samples/thesis_testing/ANALYSIS_REPOSITORY/Framework_Complexity/Matrix_Multiplication/: Impl_Boost.cpp  Impl_Cpp.cpp  Impl_Cuda.cu  Impl_Kokkos.cpp  Impl_OpenCL.cpp  Impl_OpenMP.cpp  Impl_Vulkan.cpp
samples/thesis_testing/ANALYSIS_REPOSITORY/Framework_Complexity/Polyhedral_Gravity_Model/: impl_adaptive_cpp.cpp  impl_cuda.cu  (+6 more)
samples/thesis_testing/manual/: man_cyclomatic.cpp  man_halstead.cpp  man_nesting_depth.cpp  man_sloc.cpp
samples/thrust/: complex.cpp  simple.cpp
samples/webgpu/: complex.cpp  simple.cpp
stats/: __main__.py  analysis.py  data_loader.py  preprocessing.py  report_generator.py  visualization.py
testing/: README.md  test_cognitive.py  test_cyclomatic.py  test_detect_framework.py  test_halstead.py  test_nestdepth.py  test_nesting_depth.py  test_sloc.py  test_tools.py
tests/: test_basic.py  test_cyclomatic.py  test_halstead.py  test_sloc.py
tests/test_files/: complex.cpp  complex_cuda.cu  complex_opencl.cpp  edge.cpp  simple.cpp
tools/: deduplicate_keywords.py  filter.py  string1.txt  string2.txt
(+18 files in other folders)
