[project]
name = "code-complexity-metrics"
version = "0.1.0"
description = "Implementation and Comparison of Code Complexity Metrics to Assess Developer Productivity"
authors = [
    { name="Christian Ispas", email="chrispas03@yahoo.dk" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asttokens==3.0.0",
    "decorator==5.2.1",
    "executing==2.2.0",
    "iniconfig==2.1.0",
    "ipython==9.4.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "matplotlib-inline==0.1.7",
    "networkx==3.5",
    "numpy==2.3.2",
    "packaging==25.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "prompt_toolkit==3.0.51",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "pytools==2025.2.2",
    "siphash24==1.7",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "typing_extensions==4.14.1",
    "wcwidth==0.2.13",
    "clang>=16.0.0",  # Add Python clang bindings
    "pandas==2.3.3",
    "matplotlib==3.10.6",
    "seaborn==0.13.2",
    "reportlab==4.4.4"
] # pip install "libclang==18.1.1"

[project.scripts]
code-metrics = "code_complexity.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_complexity*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


#Non-Python Dpendencies to install on Ubuntu:
#SUDO apt dependencies:
#sudo apt install kokkos libkokkos-dev
#sudo apt install libomp-dev
#sudo apt install nvidia-cuda-toolkit
#sudo apt install clang-15 llvm-15
#SDK kit for cuda
